istio/online-store-web-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: online-store-web-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - online-store-web-gateway
  http:
  - match:
    - uri:
        prefix: /
  - route:
    - destination:
        host: online-store-web
        port:
          number: 80
